--- a/6.contacto.html
+++ b/6.contacto.html
@@ -20,24 +20,21 @@
 </head>
 <body>
   <header>
-    <div class="contenedor">
-            <h1 class="logotipo">Saturn</h1>
-      <img src="./imagenes/saturn.svg" alt="saturn"
-      width="40"
-      height="40"/>
-            <nav>
-                <a href="index romina gonzalez.html" class="activo">Home</a>
-                <a href="3.Nosotros.html">Nosotros</a>
-                <a href="4.mi cuenta.html">Mi cuenta</a>
-                <a href="5.productos.html">Productos</a>
-                <a href="6.contacto.html">Contacto</a>
-            </nav>
-      <div class="cart"><img src="./imagenes/shopping-cart.svg" alt="carrito"
-        width="30"
-        height="30"
-        />
-      </div>
-        </div>
+    <nav>
+      <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <label class="logo">Saturn</label>
+      <img src="./imagenes/saturn.svg" alt="saturn" width="100" height="30">
+      <ul>
+        <li><a class="active" href="2.home.html">Home</a></li>
+        <li><a href="3.Nosotros.html">Nosotros</a></li>
+        <li><a href="4.mi cuenta.html">Mi cuenta</a></li>
+        <li><a href="5.productos.html">Productos</a></li>
+        <li><a href="6.contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
     </header>
 
 
