--- a/404.html
+++ b/404.html
@@ -3,40 +3,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+     <!--Bootstrap-->
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="error404.css">
+    <link rel="icon" href="imagenes/saturn (2).png">
     <title>Pagina 404</title>
 </head>
 <body>
-    <header>
-        <div class="contenedor">
-          <h1 class="logotipo">Saturn</h1>
-          <img src="./imagenes/saturn.svg" alt="saturn"
-          width="40"
-          height="40"/>
-          <nav>
-            <a href="index romina gonzalez.html" class="activo">Home</a>
-				<a href="3.Nosotros.html">Nosotros</a>
-				<a href="4.mi cuenta.html">Mi cuenta</a>
-				<a href="5.productos.html">Productos</a>
-				<a href="6.contacto.html">Contacto</a>
-          </nav>
-          <div class="cart"><img src="./imagenes/shopping-cart.svg" alt="cart"
-            width="30"
-            height="30"
-            />
-          </div>
-        </div>
-      </header>
-     <div class="contenedor-error">
-      <div class="numeros">
-        <span>4</span>
-        <span>0</span>
-        <span>4</span>
-      </div>
+  <div class="wrapper">
+    <h2>Oops! Pagina no encontrada</h2>
+    <div>
+        <img src="imagenes/undraw_page_not_found_su7k.png" alt="404">
     </div>
-
-        <a href="2.home.html" class="boton-home">Ir a Home</a>
-    </div>
+    <h4>No podemos encontrar la pagina</h4>
+    <a href="2.home.html"><button type="button" class="main-btn">HOME</button></a>
+  </div>
+  <!--Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
